--- a/dev/examples/data_navigation/line_spectrum.html
+++ b/dev/examples/data_navigation/line_spectrum.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>data_navigation example code: line_spectrum.py &mdash; Hyperspy 0.6 documentation</title>
+    <title>data_navigation example code: line_spectrum.py &mdash; Hyperspy 0.6+dev documentation</title>
     
     <link rel="stylesheet" href="../../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.6',
+        VERSION:     '0.6+dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="../../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6 documentation" href="../../index.html" />
+    <link rel="top" title="Hyperspy 0.6+dev documentation" href="../../index.html" />
  
 <script type="text/javascript">
 
@@ -57,7 +57,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.6 documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -141,12 +141,12 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.6 documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2012, The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
 </html>
