--- a/dev/user_guide/mva.html
+++ b/dev/user_guide/mva.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Machine learning &mdash; Hyperspy 0.6 documentation</title>
+    <title>Machine learning &mdash; Hyperspy 0.6+dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6',
+        VERSION:     '0.6+dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,10 +27,10 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6 documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Curve fitting" href="model.html" />
-    <link rel="prev" title="Tools" href="tools.html" />
+    <link rel="prev" title="Visualisation of multi-dimensional data" href="visualisation.html" />
  
 <script type="text/javascript">
 
@@ -64,9 +64,9 @@
           <a href="model.html" title="Curve fitting"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="tools.html" title="Tools"
+          <a href="visualisation.html" title="Visualisation of multi-dimensional data"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -284,8 +284,8 @@ machine learning structure.</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="tools.html"
-                        title="previous chapter">Tools</a></p>
+  <p class="topless"><a href="visualisation.html"
+                        title="previous chapter">Visualisation of multi-dimensional data</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="model.html"
                         title="next chapter">Curve fitting</a></p>
@@ -327,15 +327,15 @@ machine learning structure.</p>
           <a href="model.html" title="Curve fitting"
              >next</a> |</li>
         <li class="right" >
-          <a href="tools.html" title="Tools"
+          <a href="visualisation.html" title="Visualisation of multi-dimensional data"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2012, The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
 </html>
