--- a/dev/user_guide/install.html
+++ b/dev/user_guide/install.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -235,12 +233,10 @@ to remove the entries manually:</p>
 </pre></div>
 </div>
 </li>
-<li><p class="first">If Hyperspy raise a MemoryError exceptions:
-* Install the 64bit if you&#8217;re using the 32bit one and you are running</p>
-<blockquote>
-<div><p>Hyperspy in a 64bit system.</p>
-</div></blockquote>
+<li><p class="first">If Hyperspy raise a MemoryError exceptions:</p>
 <ul class="simple">
+<li>Install the 64bit if you&#8217;re using the 32bit one and you are running
+Hyperspy in a 64bit system.</li>
 <li>Increase the available RAM but closing other applications or physically
 adding more RAM to your computer.</li>
 </ul>
@@ -333,7 +329,7 @@ adding more RAM to your computer.</li>
     </div>
     <div class="footer">
         &copy; Copyright 2012, The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2b2.
     </div>
   </body>
 </html>
