--- a/dev/user_guide/mapped_parameters_structure.html
+++ b/dev/user_guide/mapped_parameters_structure.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -30,7 +28,7 @@
     <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Bibliography" href="bibliography.html" />
-    <link rel="prev" title="Curve fitting" href="model.html" />
+    <link rel="prev" title="Loading and saving data" href="io.html" />
  
 <script type="text/javascript">
 
@@ -64,7 +62,7 @@
           <a href="bibliography.html" title="Bibliography"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="model.html" title="Curve fitting"
+          <a href="io.html" title="Loading and saving data"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
@@ -287,8 +285,8 @@ and the L beta line of Nickel.</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="model.html"
-                        title="previous chapter">Curve fitting</a></p>
+  <p class="topless"><a href="io.html"
+                        title="previous chapter">Loading and saving data</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="bibliography.html"
                         title="next chapter">Bibliography</a></p>
@@ -330,7 +328,7 @@ and the L beta line of Nickel.</p>
           <a href="bibliography.html" title="Bibliography"
              >next</a> |</li>
         <li class="right" >
-          <a href="model.html" title="Curve fitting"
+          <a href="io.html" title="Loading and saving data"
              >previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
@@ -338,7 +336,7 @@ and the L beta line of Nickel.</p>
     </div>
     <div class="footer">
         &copy; Copyright 2012, The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2b2.
     </div>
   </body>
 </html>
