--- a/dev/user_guide/spectrum.html
+++ b/dev/user_guide/spectrum.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -30,7 +28,7 @@
     <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Image tools" href="image.html" />
-    <link rel="prev" title="Tools" href="tools.html" />
+    <link rel="prev" title="Data structures: the Signal classes" href="tools.html" />
  
 <script type="text/javascript">
 
@@ -64,7 +62,7 @@
           <a href="image.html" title="Image tools"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="tools.html" title="Tools"
+          <a href="tools.html" title="Data structures: the Signal classes"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
@@ -166,7 +164,7 @@ passed) can perform data smoothing with different algorithms:</p>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="tools.html"
-                        title="previous chapter">Tools</a></p>
+                        title="previous chapter">Data structures: the Signal classes</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="image.html"
                         title="next chapter">Image tools</a></p>
@@ -208,7 +206,7 @@ passed) can perform data smoothing with different algorithms:</p>
           <a href="image.html" title="Image tools"
              >next</a> |</li>
         <li class="right" >
-          <a href="tools.html" title="Tools"
+          <a href="tools.html" title="Data structures: the Signal classes"
              >previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
@@ -216,7 +214,7 @@ passed) can perform data smoothing with different algorithms:</p>
     </div>
     <div class="footer">
         &copy; Copyright 2012, The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2b2.
     </div>
   </body>
 </html>
