Updated doc release: dev

--- a/dev/user_guide/mva.html
+++ b/dev/user_guide/mva.html
@@ -28,7 +28,7 @@
     <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Curve fitting" href="model.html" />
-    <link rel="prev" title="Data visualisation" href="visualisation.html" />
+    <link rel="prev" title="Visualisation of multi-dimensional data" href="visualisation.html" />
  
 <script type="text/javascript">
 
@@ -62,7 +62,7 @@
           <a href="model.html" title="Curve fitting"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="visualisation.html" title="Data visualisation"
+          <a href="visualisation.html" title="Visualisation of multi-dimensional data"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
@@ -283,7 +283,7 @@ machine learning structure.</p>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="visualisation.html"
-                        title="previous chapter">Data visualisation</a></p>
+                        title="previous chapter">Visualisation of multi-dimensional data</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="model.html"
                         title="next chapter">Curve fitting</a></p>
@@ -325,7 +325,7 @@ machine learning structure.</p>
           <a href="model.html" title="Curve fitting"
              >next</a> |</li>
         <li class="right" >
-          <a href="visualisation.html" title="Data visualisation"
+          <a href="visualisation.html" title="Visualisation of multi-dimensional data"
              >previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
