--- a/dev/user_guide/install.html
+++ b/dev/user_guide/install.html
@@ -233,10 +233,12 @@ to remove the entries manually:</p>
 </pre></div>
 </div>
 </li>
-<li><p class="first">If Hyperspy raise a MemoryError exceptions:</p>
+<li><p class="first">If Hyperspy raise a MemoryError exceptions:
+* Install the 64bit if you&#8217;re using the 32bit one and you are running</p>
+<blockquote>
+<div><p>Hyperspy in a 64bit system.</p>
+</div></blockquote>
 <ul class="simple">
-<li>Install the 64bit if you&#8217;re using the 32bit one and you are running
-Hyperspy in a 64bit system.</li>
 <li>Increase the available RAM but closing other applications or physically
 adding more RAM to your computer.</li>
 </ul>
