--- a/dev/user_guide/mapped_parameters_structure.html
+++ b/dev/user_guide/mapped_parameters_structure.html
@@ -28,7 +28,7 @@
     <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Bibliography" href="bibliography.html" />
-    <link rel="prev" title="Loading and saving data" href="io.html" />
+    <link rel="prev" title="Curve fitting" href="model.html" />
  
 <script type="text/javascript">
 
@@ -62,7 +62,7 @@
           <a href="bibliography.html" title="Bibliography"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="io.html" title="Loading and saving data"
+          <a href="model.html" title="Curve fitting"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
@@ -285,8 +285,8 @@ and the L beta line of Nickel.</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="io.html"
-                        title="previous chapter">Loading and saving data</a></p>
+  <p class="topless"><a href="model.html"
+                        title="previous chapter">Curve fitting</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="bibliography.html"
                         title="next chapter">Bibliography</a></p>
@@ -328,7 +328,7 @@ and the L beta line of Nickel.</p>
           <a href="bibliography.html" title="Bibliography"
              >next</a> |</li>
         <li class="right" >
-          <a href="io.html" title="Loading and saving data"
+          <a href="model.html" title="Curve fitting"
              >previous</a> |</li>
         <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
