Updated doc release: dev

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -2001,7 +2001,7 @@
   </dt>
 
       
-  <dt><a href="api/hyperspy.html#module-hyperspy.__init__">hyperspy.__init__ (module)</a>
+  <dt><a href="api/hyperspy.html#module-hyperspy">hyperspy (module)</a>
   </dt>
 
       
