--- a/dev/user_guide/visualisation.html
+++ b/dev/user_guide/visualisation.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Visualisation of multi-dimensional data &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>Visualisation of multi-dimensional data &mdash; Hyperspy 0.7b1 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6+dev',
+        VERSION:     '0.7b1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.7b1 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Machine learning" href="mva.html" />
     <link rel="prev" title="Tools" href="tools.html" />
@@ -64,7 +64,7 @@
         <li class="right" >
           <a href="tools.html" title="Tools"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.7b1 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -244,7 +244,7 @@ P. Burdet, <cite>et al.</cite>, Acta Materialia, 61, p. 3090-3098 (2013) (see
         <li class="right" >
           <a href="tools.html" title="Tools"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.7b1 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
