--- a/dev/citing.html
+++ b/dev/citing.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Citing Hyperspy &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>Citing Hyperspy &mdash; Hyperspy 0.7b1 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6+dev',
+        VERSION:     '0.7b1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6+dev documentation" href="index.html" />
+    <link rel="top" title="Hyperspy 0.7b1 documentation" href="index.html" />
     <link rel="prev" title="Credits" href="credits.html" />
  
 <script type="text/javascript">
@@ -59,7 +59,7 @@
         <li class="right" >
           <a href="credits.html" title="Credits"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="index.html">Hyperspy 0.7b1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -124,7 +124,7 @@ please acknowledge that fact by citing the software and, if possible, give a lin
         <li class="right" >
           <a href="credits.html" title="Credits"
              >previous</a> |</li>
-        <li><a href="index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="index.html">Hyperspy 0.7b1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
