--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Welcome to Hyperspy’s documentation! &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>Welcome to Hyperspy’s documentation! &mdash; Hyperspy 0.7b1 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.6+dev',
+        VERSION:     '0.7b1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6+dev documentation" href="#" />
+    <link rel="top" title="Hyperspy 0.7b1 documentation" href="#" />
     <link rel="next" title="Hyperspy User Guide (DRAFT)" href="user_guide/index.html" />
  
 <script type="text/javascript">
@@ -59,7 +59,7 @@
         <li class="right" >
           <a href="user_guide/index.html" title="Hyperspy User Guide (DRAFT)"
              accesskey="N">next</a> |</li>
-        <li><a href="#">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="#">Hyperspy 0.7b1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -221,7 +221,7 @@
         <li class="right" >
           <a href="user_guide/index.html" title="Hyperspy User Guide (DRAFT)"
              >next</a> |</li>
-        <li><a href="#">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="#">Hyperspy 0.7b1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
