--- a/dev/user_guide/bibliography.html
+++ b/dev/user_guide/bibliography.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Bibliography &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>Bibliography &mdash; Hyperspy 0.7b1 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6+dev',
+        VERSION:     '0.7b1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.7b1 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Credits" href="../credits.html" />
     <link rel="prev" title="Mapped parameters structure" href="mapped_parameters_structure.html" />
@@ -64,7 +64,7 @@
         <li class="right" >
           <a href="mapped_parameters_structure.html" title="Mapped parameters structure"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.7b1 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -721,7 +721,7 @@ p.infolinks { margin: 0.5em 0em 0em 0em; padding: 0px; }
         <li class="right" >
           <a href="mapped_parameters_structure.html" title="Mapped parameters structure"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.7b1 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
