--- a/dev/user_guide/examples/index.html
+++ b/dev/user_guide/examples/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
+    <script type="text/javascript" src="../../_static/copybutton.js"></script>
     <script type="text/javascript" src="../../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../../_static/hyperspy_logo.ico"/>
     <link rel="top" title="Hyperspy 0.6+dev documentation" href="../../index.html" />
@@ -72,7 +73,7 @@
 <tbody valign="top">
 <tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.6+dev</td>
 </tr>
-<tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">March 10, 2014</td>
+<tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">April 03, 2014</td>
 </tr>
 </tbody>
 </table>
