--- a/dev/credits.html
+++ b/dev/credits.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
+    <script type="text/javascript" src="_static/copybutton.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
     <link rel="top" title="Hyperspy 0.6+dev documentation" href="index.html" />
