Updated doc release: dev

--- a/dev/np-modindex.html
+++ b/dev/np-modindex.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Python Module Index &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>Python Module Index &mdash; HyperSpy 0.6+dev documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -23,10 +23,9 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <script type="text/javascript" src="_static/copybutton.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6+dev documentation" href="index.html" />
+    <link rel="top" title="HyperSpy 0.6+dev documentation" href="index.html" />
 
  
 <script type="text/javascript">
@@ -59,7 +58,7 @@
         <li class="right" >
           <a href="#" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -1025,11 +1024,11 @@
         <li class="right" >
           <a href="#" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2012, The Hyperspy development team.
+        &copy; Copyright 2012, The HyperSpy development team.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3a0.
     </div>
   </body>
