--- a/dev/user_guide/dielectric_function.html
+++ b/dev/user_guide/dielectric_function.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Dielectric function tools &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>Dielectric function tools &mdash; HyperSpy 0.6+dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -23,11 +23,10 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
-    <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
+    <link rel="top" title="HyperSpy 0.6+dev documentation" href="../index.html" />
+    <link rel="up" title="HyperSpy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Loading and saving data" href="io.html" />
     <link rel="prev" title="Energy-Dispersive X-Rays Spectrometry (EDS)" href="eds.html" />
  
@@ -65,8 +64,8 @@
         <li class="right" >
           <a href="eds.html" title="Energy-Dispersive X-Rays Spectrometry (EDS)"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
-          <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li>
+          <li><a href="index.html" accesskey="U">HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -183,12 +182,12 @@ characteristic scattering angle.</p>
         <li class="right" >
           <a href="eds.html" title="Energy-Dispersive X-Rays Spectrometry (EDS)"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
-          <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li>
+          <li><a href="index.html" >HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2012, The Hyperspy development team.
+        &copy; Copyright 2012, The HyperSpy development team.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3a0.
     </div>
   </body>
