--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>Index &mdash; HyperSpy 0.6+dev documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -24,10 +24,9 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <script type="text/javascript" src="_static/copybutton.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6+dev documentation" href="index.html" />
+    <link rel="top" title="HyperSpy 0.6+dev documentation" href="index.html" />
  
 <script type="text/javascript">
 
@@ -57,7 +56,7 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -7067,11 +7066,11 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2012, The Hyperspy development team.
+        &copy; Copyright 2012, The HyperSpy development team.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3a0.
     </div>
   </body>
