--- a/dev/user_guide/metadata_structure.html
+++ b/dev/user_guide/metadata_structure.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Metadata structure &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>Metadata structure &mdash; HyperSpy 0.6+dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -23,11 +23,10 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.6+dev documentation" href="../index.html" />
-    <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
+    <link rel="top" title="HyperSpy 0.6+dev documentation" href="../index.html" />
+    <link rel="up" title="HyperSpy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Bibliography" href="bibliography.html" />
     <link rel="prev" title="Loading and saving data" href="io.html" />
  
@@ -65,8 +64,8 @@
         <li class="right" >
           <a href="io.html" title="Loading and saving data"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
-          <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li>
+          <li><a href="index.html" accesskey="U">HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -325,7 +324,7 @@ and the L beta line of Nickel.</p>
 <dd><p class="first">type: Str</p>
 <p class="last">A term that describes the signal type, e.g. EDX, PES... This information
 can be used by HyperSpy to load the file as a specific signal class and
-therefore the naming should be standarised. Currently Hyperspy provides
+therefore the naming should be standarised. Currently HyperSpy provides
 special signal class for photoemission spectroscopy and electron energy
 loss spectroscopy and the signal_kind in these cases should be respectively
 PES and EELS.</p>
@@ -483,12 +482,12 @@ should be accompanied by an &#8220;energy_units&#8221; leaf.</p>
         <li class="right" >
           <a href="io.html" title="Loading and saving data"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.6+dev documentation</a> &raquo;</li>
-          <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li>
+          <li><a href="index.html" >HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2012, The Hyperspy development team.
+        &copy; Copyright 2012, The HyperSpy development team.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3a0.
     </div>
   </body>
