Updated doc release: dev

--- a/dev/user_guide/eds.html
+++ b/dev/user_guide/eds.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Energy-Dispersive X-Rays Spectrometry (EDS) &mdash; HyperSpy 0.7+dev documentation</title>
+    <title>Energy-Dispersive X-Rays Spectrometry (EDS) &mdash; HyperSpy 0.7.1 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.7+dev',
+        VERSION:     '0.7.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.7+dev documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.7.1 documentation" href="../index.html" />
     <link rel="up" title="HyperSpy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="Dielectric function tools" href="dielectric_function.html" />
     <link rel="prev" title="Electron Energy Loss Spectroscopy" href="eels.html" />
@@ -65,7 +65,7 @@
         <li class="right" >
           <a href="eels.html" title="Electron Energy Loss Spectroscopy"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.7+dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">HyperSpy 0.7.1 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -283,22 +283,22 @@ overvoltage of 2 (&lt; beam energy / 2)).</p>
 <span class="gp">&gt;&gt;&gt; </span> <span class="n">utils</span><span class="o">.</span><span class="n">material</span><span class="o">.</span><span class="n">elements</span><span class="o">.</span><span class="n">Fe</span><span class="o">.</span><span class="n">Atomic_properties</span><span class="o">.</span><span class="n">Xray_lines</span>
 <span class="go">├── Ka</span>
 <span class="go">│   ├── energy (keV) = 6.404</span>
-<span class="go">│   └── factor = 1</span>
+<span class="go">│   └── weight = 1.0</span>
 <span class="go">├── Kb</span>
 <span class="go">│   ├── energy (keV) = 7.0568</span>
-<span class="go">│   └── factor = 0.1</span>
+<span class="go">│   └── weight = 0.1272</span>
 <span class="go">├── La</span>
 <span class="go">│   ├── energy (keV) = 0.705</span>
-<span class="go">│   └── factor = 1</span>
+<span class="go">│   └── weight = 1.0</span>
 <span class="go">├── Lb3</span>
 <span class="go">│   ├── energy (keV) = 0.792</span>
-<span class="go">│   └── factor = 0.08</span>
+<span class="go">│   └── weight = 0.02448</span>
 <span class="go">├── Ll</span>
 <span class="go">│   ├── energy (keV) = 0.615</span>
-<span class="go">│   └── factor = 0.04</span>
+<span class="go">│   └── weight = 0.3086</span>
 <span class="go">└── Ln</span>
 <span class="go">    ├── energy (keV) = 0.62799</span>
-<span class="go">    └── factor = 0.01</span>
+<span class="go">    └── weight = 0.12525</span>
 </pre></div>
 </div>
 </div>
@@ -434,7 +434,7 @@ an interactive way to generate intensity map.</p>
         <li class="right" >
           <a href="eels.html" title="Electron Energy Loss Spectroscopy"
              >previous</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.7+dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">HyperSpy 0.7.1 documentation</a> &raquo;</li>
           <li><a href="index.html" >HyperSpy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
